--- a/WebContent/WEB-INF/template/header.xhtml
+++ b/WebContent/WEB-INF/template/header.xhtml
@@ -3,75 +3,128 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 
-  <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar-sm" role="navigation">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="collapse navbar-collapse">
-                           
-                            <ul class="nav navbar-nav navbar-right">
-                              
-                                
-                                <li>
-                                    <a href="#">Settings <i class="glyphicon glyphicon-cog"></i></a>
-                                </li>
-                                <li>
-                                    <a href="#">Go to frontend <i class="glyphicon glyphicon-share-alt"></i></a>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" role="button" class="dropdown-toggle" data-hover="dropdown"> <i class="glyphicon glyphicon-user"></i> Username <i class="caret"></i></a>
-                                    <ul class="dropdown-menu">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li role="presentation" class="divider"></li>
-                                        <li><a href="index.html">Logout</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
+<nav
+	class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar-sm"
+	role="navigation">
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="collapse navbar-collapse">
 
-        <!-- main / large navbar -->
-        <nav class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar bootstrap-admin-navbar-under-small" role="navigation">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-navbar-collapse">
-                                <span class="sr-only">Toggle navigation</span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="#">Admin Panel</a>
-                        </div>
-                        <div class="collapse navbar-collapse main-navbar-collapse">
-                            <ul class="nav navbar-nav">
-                               
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-hover="dropdown">Dropdown <b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li role="presentation" class="dropdown-header">Dropdown header</li>
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Another action</a></li>
-                                        <li><a href="#">Something else here</a></li>
-                                        <li role="presentation" class="divider"></li>
-                                        <li role="presentation" class="dropdown-header">Dropdown header</li>
-                                        <li><a href="#">Separated link</a></li>
-                                        <li><a href="#">One more separated link</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div><!-- /.navbar-collapse -->
-                    </div>
-                </div>
-            </div>
-    
-        </nav>
-       
+				<ul class="nav navbar-nav navbar-right">
+
+
+					<li><a href="https://www.facebook.com">Facebook <i
+							class="glyphicon glyphicon-cog"></i></a></li>
+					<li><a href="#">Prductos<i
+							class="glyphicon glyphicon-share-alt"></i></a></li>
+					<li class="dropdown"><a href="#" role="button"
+						class="dropdown-toggle" data-hover="dropdown"> <i
+							class="glyphicon glyphicon-user"></i> Alvaro Aguniaga <i
+							class="caret"></i></a>
+						<ul class="dropdown-menu">
+
+							<li><a href="logeo.xhtml">Logout</a></li>
+						</ul></li>
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
+</nav>
+
+<!-- main / large navbar -->
+<nav
+	class="navbar navbar-default navbar-fixed-top bootstrap-admin-navbar bootstrap-admin-navbar-under-small"
+	role="navigation">
+<div class="container">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".main-navbar-collapse">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="correoRemendaciones.xhtml">Menu
+					Principal</a>
+			</div>
+			<div class="collapse navbar-collapse main-navbar-collapse">
+				<ul class="nav navbar-nav">
+
+					<li class="dropdown"><a href="registroUsuario.xhtml"
+						class="dropdown-toggle" data-hover="dropdown">Mantenimiento
+							Usuario <b class="caret"></b>
+					</a>
+						<ul class="dropdown-menu">
+							<li role="presentation" class="dropdown-header">Usuarios</li>
+							<li><a href="registroUsuario.xhtml">registra</a></li>
+							<li><a href="actualizarUsuario.xhtml">actualiza</a></li>
+							<li><a href="">elimina</a></li>
+							<li role="presentation" class="divider"></li>
+							<li role="presentation" class="dropdown-header">Util</li>
+
+							<li><a href="registroDistrito.xhtml">Ubicacion</a></li>
+							<li><a href="FiltrobyUsuarios.xhtml">Buscar Usuario</a></li>
+						</ul></li>
+					<li class="dropdown"><a href="#" class="dropdown-toggle"
+						data-hover="dropdown">Mantenimiento Proveedores <b
+							class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li role="presentation" class="dropdown-header">Proveedor</li>
+							<li><a href="registraProveedor.xhtml">registra </a></li>
+							<li><a href="actualizaProveedor.xhtml">actualiza</a></li>
+							<li><a href="#">elimina</a></li>
+							<li role="presentation" class="divider"></li>
+							<li role="presentation" class="dropdown-header">stock</li>
+							<li><a href="listaProveedores.xhtml">Lista de
+									Proveedores</a></li>
+							<li><a href="buscarProbeedor.xhtml">Proveedores Por CIA</a></li>
+						</ul></li>
+					<li class="dropdown"><a href="#" class="dropdown-toggle"
+						data-hover="dropdown">Mantenimiento Productos <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li role="presentation" class="dropdown-header">Producto</li>
+							<li><a href="#">registra </a></li>
+							<li><a href="#">actualiza</a></li>
+							<li><a href="#">elimina</a></li>
+							<li role="presentation" class="divider"></li>
+							<li role="presentation" class="dropdown-header">stock</li>
+							<li><a href="#">stockProducto</a></li>
+
+						</ul></li>
+					<li class="dropdown"><a href="#" class="dropdown-toggle"
+						data-hover="dropdown">Actividades <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li role="presentation" class="dropdown-header">Actividades
+								del Dia</li>
+							<li><a href="#">Lista Usuarios GYM</a></li>
+							<li role="presentation" class="divider"></li>
+							<li role="presentation" class="dropdown-header">Control
+								Actividad</li>
+							<li><a href="registroActividad.xhtml">Registra Rutina</a></li>
+
+						</ul></li>
+					<li class="dropdown"><a href="#" class="dropdown-toggle"
+						data-hover="dropdown">Ventas <b class="caret"></b></a>
+						<ul class="dropdown-menu">
+							<li role="presentation" class="dropdown-header">Producto en
+								Venta</li>
+							<li><a href="#">Productos</a></li>
+							<li><a href="#">Pedidos</a></li>
+							<li><a href="#">Facturas</a></li>
+
+
+						</ul></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+	</div>
+</div>
+
+</nav>
+
 
 </html>
